--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,11 +25,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GigihAndroid"
         tools:targetApi="31">
+
+        <service android:name=".utils.MusicService" />
+        <service android:name=".utils.BoundService" />
+
+        <provider
+            android:name=".utils.DatabaseProvider"
+            android:authorities="com.gigih.android"
+            android:exported="true"
+            android:grantUriPermissions="true"
+            tools:ignore="ExportedContentProvider" />
+
         <activity
             android:name=".MenuActivity"
             android:exported="false"
             android:label="@string/title_activity_menu"
             android:theme="@style/Theme.GigihAndroid" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
